--- a/18DCS079_Twitter_Sentiment.ipynb
+++ b/18DCS079_Twitter_Sentiment.ipynb
@@ -7,7 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
-      "include_colab_link": true
+      "include_colab_link": True
     },
     "kernelspec": {
       "name": "python3",
